@@ -1,4 +1,5 @@
 20010409
+ - (stevesk) use setresgid() for setegid() if needed
  - (stevesk) configure.in: typo
  - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/04/08 16:01:36
